--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -1,5 +1,6 @@
-deploy.ant.properties.file=C:\\Users\\Durgesh\\AppData\\Roaming\\NetBeans\\11.0\\tomcat80.properties
-j2ee.server.home=C:/Program Files/Apache Software Foundation/Tomcat 8.5_Tomcat_New
-j2ee.server.instance=tomcat80:home=C:\\Program Files\\Apache Software Foundation\\Tomcat 8.5_Tomcat_New
+deploy.ant.properties.file=C:\\Users\\sairam\\AppData\\Roaming\\NetBeans\\8.2\\tomcat90.properties
+file.reference.mysql-connector.jar=C:\\Program Files (x86)\\MySQL\\Connector J 8.0
+j2ee.server.home=C:/Program Files/Apache Software Foundation/Tomcat 9.0
+j2ee.server.instance=tomcat90:home=C:\\Program Files\\Apache Software Foundation\\Tomcat 9.0\\
 selected.browser=Chrome
-user.properties.file=C:\\Users\\Durgesh\\AppData\\Roaming\\NetBeans\\11.0\\build.properties
+user.properties.file=C:\\Users\\sairam\\AppData\\Roaming\\NetBeans\\8.2\\build.properties
