--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -1,5 +1,5 @@
 deploy.ant.properties.file=C:\\Users\\sairam\\AppData\\Roaming\\NetBeans\\8.2\\tomcat90.properties
-file.reference.mysql-connector.jar=C:\\Program Files (x86)\\MySQL\\Connector J 8.0
+file.reference.mysql-connector.jar=C:\\Program Files (x86)\\MySQL\\Connector J 8.0\\mysql-connector-java-8.0.28.jar
 j2ee.server.home=C:/Program Files/Apache Software Foundation/Tomcat 9.0
 j2ee.server.instance=tomcat90:home=C:\\Program Files\\Apache Software Foundation\\Tomcat 9.0\\
 selected.browser=Chrome
