--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -28,7 +28,6 @@ dist.war=${dist.dir}/${war.name}
 endorsed.classpath=\
     ${libs.javaee-endorsed-api-7.0.classpath}
 excludes=
-file.reference.mysql-connector.jar=E:\\Durgesh\\softwares\\important_jars\\mysql-connector.jar
 includes=**
 j2ee.compile.on.save=true
 j2ee.copy.static.files.on.save=true
@@ -81,6 +80,6 @@ src.dir=${source.root}/java
 test.src.dir=test
 war.content.additional=
 war.ear.name=${war.name}
-war.name=TechBlog.war
+war.name=Healthcare_Blogs_andForum.war
 web.docbase.dir=web
 webinf.dir=web/WEB-INF
